Cambios en los px

--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -1497,7 +1497,7 @@ nav ul li a:hover {
 }
 
 .dolce-frase {
-    width: 500px;
+    width: 50%;
 
 }
 
@@ -1522,7 +1522,7 @@ nav ul li a:hover {
     }
 
     .dolce-frase {
-        width: 300px;
+        width: 100%;
     }
 
     .bienvenida-body {
